[package]
name = "dynamic-data-experiments"
description = "Experiments to support dynamic data for Codex"
authors = ["Mohammed Alghazwi <m.ghazwi@gmail.com>"]
readme = "README.md"
version = "1.0.0"
edition = "2024"

[dependencies]
rand = { version = "0.9.0", features = [ "std", "std_rng" ] }
itertools = "0.14.0"
clap = { version = "4.5.27", features = ["derive"] }
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
anyhow = "1.0.95"